feat: implement comprehensive Provider Verification and Credentialing System
- Add provider-verification.clar smart contract with full credential management
- Enhance access-control.clar to integrate with provider verification
- Implement ProviderVerificationService with complete business logic
- Add comprehensive TypeScript models for provider credentials
- Create RESTful API endpoints for provider management
- Add extensive test coverage for contracts, services, and APIs
- Include documentation and integration examples
- Support multiple credential types and verification workflows
- Implement provider suspension/reactivation capabilities
- Add activity tracking and audit trail functionality

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -13,6 +13,10 @@ epoch = "latest"
 path = "contracts/audit-trail.clar"
 epoch = "latest"
 
+[contracts.provider-verification]
+path = "contracts/provider-verification.clar"
+epoch = "latest"
+
 [repl.analysis]
 passes = ["check_checker"]
 check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
